# IIoT-FL

./: .gitignore  Dockerfile.server  README.md  docker-compose.generated.yml  generate_compose.py  hyperparameter_search.py  main.py  pyproject.toml  requirements.txt  run_experiments.py  setup.py  utils.py
IIoT-FL/: __init__.py  client.py  requirements.txt  server.py  task.py
IIoT-FL/server/: Dockerfile
client/: Dockerfile
iiot_fl/: __init__.py  client.py  config.py  dataset.py  docker-compose.yml  model.py  server.py  task.py
