[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="FL-IIoT"
version="0.0.1"
authors=[
    { name = "Aidan Gatenbee", email="aidan.gatenbee.1@us.af.mil"},
]
description="Exploring Federated Learning on Industrial IoT data"
readme="README.md"
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies=[
    "torch",
    "torchvision",
    "flwr",
    "numpy",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "tqdm",
    "wandb",
    "kagglehub",
]
license="Apache-2.0"

[tool.flwr.app]
publisher="Aidan Gatenbee"

[tool.flwr.app.components]
serverapp="iiotfl.server:app"
clientapp="iiotfl.client:app"

[tool.flwr.app.config]
model-type="dsb-trunking"
input-dim=18
bottleneck=64
hidden-dim=128
head-dim=64
dropout=0.35
num-server-rounds=5
fraction-evaluate=0.2
local-epochs=1
learning-rate=0.002
batch-size=32
dropout=0.35

[tool.flwr.app.metadata]
wandb-project-name="FL-IIoT"
run-name="DSB-Trunking"